--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
 <servlet>
+	<servlet-name>member</servlet-name>
+	<servlet-class>com.hj.member.MemberController</servlet-class>
+</servlet>
+<servlet-mapping>
+	<servlet-name>member</servlet-name>
+	<url-pattern>/member/*</url-pattern>
+</servlet-mapping>
+
+
+<servlet>
 	<servlet-name>point</servlet-name>
 	<servlet-class>com.hj.point.PointController</servlet-class>
 </servlet>
@@ -17,5 +27,4 @@
 	<servlet-name>home</servlet-name>
 	<url-pattern>/</url-pattern>
 </servlet-mapping>
-
 </web-app>
